# test-jsonrpsee

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: auth.rs  axum_server.rs  main.rs  rpc.rs  standalone.rs  todo.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  rpc-client.ts
frontend/src/components/: AddTodo.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/hooks/: useTodos.ts
