[package]
name = "json-rpc-backend"
version = "0.1.0"
edition = "2021"

[features]
default = ["standalone"]
standalone = []
axum = ["dep:axum"]

[dependencies]
jsonrpsee = { git = "https://github.com/ogital-net/jsonrpsee.git", branch = "master", features = ["server", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
hyper = "1"
http-body-util = "0.1"
axum = { version = "0.8", optional = true }
